--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <body>
+  <app-navbar></app-navbar>
   <div class="min-h-screen bg-gray-100 flex flex-col items-center justify-center">
     <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
       <h1 class="text-3xl font-bold mb-4">Bienvenue sur  <span>{{ title }}</span>!</h1>
