--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,8 +5,8 @@
         </div>
         <div class="hidden md:flex items-center space-x-4">
             <a href="#" class="hover:text-blue-300" routerLink="/">Accueil</a>
-            <a href="#" class="hover:text-blue-300" routerLink="/features">Fonctionnalités</a>
-            <a href="#" class="hover:text-blue-300" routerLink="/contact">Contact</a>
+            <a href="#" class="hover:text-blue-300" routerLink="/oui">Patés</a>
+            <a href="#" class="hover:text-blue-300" routerLink="/non">Terrines</a>
             <div class="relative inline-block">
                 <button class="inline-flex items-center space-x-1 focus:outline-none"
                     (click)="dropdownOpen = !dropdownOpen">
@@ -41,10 +41,10 @@
             <nav class="text-white pt-8">
                 <a href="#" class="block px-4 py-2 mb-2 hover:text-blue-300" routerLink="/"
                     (click)="mobileMenuOpen = false">Accueil</a>
-                <a href="#" class="block px-4 py-2 mb-2 hover:text-blue-300" routerLink="/features"
-                    (click)="mobileMenuOpen = false">Fonctionnalités</a>
-                <a href="#" class="block px-4 py-2 mb-2 hover:text-blue-300" routerLink="/contact"
-                    (click)="mobileMenuOpen = false">Contact</a>
+                <a href="#" class="block px-4 py-2 mb-2 hover:text-blue-300" routerLink="/oui"
+                    (click)="mobileMenuOpen = false">Patés</a>
+                <a href="#" class="block px-4 py-2 mb-2 hover:text-blue-300" routerLink="/non"
+                    (click)="mobileMenuOpen = false">Terrines</a>
                 <a href="#" class="block px-4 py-2 mb-2 hover:text-blue-300" routerLink="/example1"
                     (click)="mobileMenuOpen = false">Exemple 1</a>
                 <a href="#" class="block px-4 py-2 mb-2 hover:text-blue-300" routerLink="/example2"
