--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,7 @@
 <body>
   <app-navbar></app-navbar>
-  
+  <div class="container mx-auto p-6">
+    <router-outlet></router-outlet>
+    <app-footer> </app-footer>
+  </div>
 </body>
-
-
-
-
-
-
-<router-outlet></router-outlet>
