--- a/src/app/un-ami/un-ami.component.html
+++ b/src/app/un-ami/un-ami.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center space-x-3 bg-gray-100 p-3 rounded-md">
-    <i class="fas fa-user-circle text-2xl text-gray-500"></i>
-    <p class="font-medium" >{{ childAmi.nom }} </p>
-  </div>
+<div class="flex items-center space-x-3 bg-gray-100 p-3 rounded-md shadow hover:bg-gray-200 transition duration-300 ease-in-out">
+  <i class="fas fa-user-circle text-2xl text-gray-500"></i>
+  <p class="font-medium text-gray-800">{{ childAmi.nom }}</p>
+</div>
