--- a/src/app/les-amis/les-amis.component.html
+++ b/src/app/les-amis/les-amis.component.html
@@ -1,5 +1,17 @@
 <div class="bg-white shadow-md rounded-md p-6 w-full md:w-1/2 mx-auto">
-    <h2 class="font-bold text-2xl mb-4">Les Amis</h2>
+
+    <h2
+        class="font-bold text-2xl mb-4 bg-clip-text text-transparent bg-gradient-to-r text-center from-emerald-500 to-sky-500">
+        Les
+        Amis</h2>
+    <button [disabled]="!authorizeAmi"
+        class="bg-gradient-to-r from-blue-500 to-purple-500 hover:from-blue-700 hover:to-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out disabled:opacity-50 disabled:cursor-not-allowed shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 active:bg-blue-800 hover:scale-110 transform">
+        Ajout tu poto
+    </button>
+
+
+    <hr class="border-t border-gray-300 my-4">
+
     <ul class="space-y-2">
         <li *ngFor="let ami of amis">
             <app-un-ami [childAmi]="ami"></app-un-ami>
