--- a/src/app/les-amis/les-amis.component.html
+++ b/src/app/les-amis/les-amis.component.html
@@ -4,10 +4,11 @@
         class="font-bold text-2xl mb-4 bg-clip-text text-transparent bg-gradient-to-r text-center from-emerald-500 to-sky-500">
         Les
         Amis</h2>
-    <button [disabled]="!authorizeAmi"
-        class="bg-gradient-to-r from-blue-500 to-purple-500 hover:from-blue-700 hover:to-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out disabled:opacity-50 disabled:cursor-not-allowed shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 active:bg-blue-800 hover:scale-110 transform">
-        Ajout tu poto
-    </button>
+        <button [disabled]="!authorizeAmi"
+        (click)="toggleModal()"
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out disabled:opacity-50 disabled:cursor-not-allowed shadow-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 active:bg-blue-800">
+  Ajout tu poto
+</button>
 
 
     <hr class="border-t border-gray-300 my-4">
@@ -18,3 +19,5 @@
         </li>
     </ul>
 </div>
+<app-ajout-ami-modal [showModal]="showModal" (amiAdded)="addAmiToList($event)"></app-ajout-ami-modal>
+
