Ajout page Mario

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,6 +7,7 @@
             <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200" [routerLinkActiveOptions]="{exact: true}" routerLink="/">Accueil</a>
             <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200" routerLink="/oui">Patés</a>
             <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200" routerLink="/non">Terrines</a>
+            <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200" routerLink="/mario">Mario</a>
         </div>
         <button class="md:hidden focus:outline-none" (click)="mobileMenuOpen = !mobileMenuOpen">
             <i class="fas fa-bars"></i>
@@ -22,6 +23,9 @@
         </li>
         <li>
             <a href="#" class="hover:text-yellow-200" routerLink="/non" (click)="mobileMenuOpen = false">Terrines</a>
+        </li>
+        <li>
+            <a href="#" class="hover:text-yellow-200" routerLink="/mario" (click)="mobileMenuOpen = false">Mario</a>
         </li>
     </ul>
 </header>
