--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,10 +4,10 @@
             <a href="#" class="text-2xl font-bold">{{title}}</a>
         </div>
         <div class="hidden md:flex items-center space-x-4">
-            <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200" [routerLinkActiveOptions]="{exact: true}" routerLink="/">Accueil</a>
-            <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200" routerLink="/oui">Patés</a>
-            <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200" routerLink="/non">Terrines</a>
-            <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200" routerLink="/mario">Mario</a>
+            <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" [routerLinkActiveOptions]="{exact: true}" routerLink="/">Accueil</a>
+            <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/oui">Patés</a>
+            <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/non">Terrines</a>
+            <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/mario">Mario</a>
         </div>
         <button class="md:hidden focus:outline-none" (click)="mobileMenuOpen = !mobileMenuOpen">
             <i class="fas fa-bars"></i>
