--- a/src/app/mario/mario.component.html
+++ b/src/app/mario/mario.component.html
@@ -1,7 +1,7 @@
 <div class="container mx-auto px-4 py-8">
     <h1 class="text-4xl font-bold mb-6 text-center">User Profile</h1>
     <div class="flex flex-col items-center">
-        <img src="https://source.unsplash.com/random/300x300?mario" alt="Random Mario"
+        <img [src]="randomMario" alt="Random Mario"
             class="w-48 h-48 object-cover mb-6 rounded" />
 
         <p class="mb-2">Nom: {{ userName }}</p>
