--- a/src/app/mario/mario.component.html
+++ b/src/app/mario/mario.component.html
@@ -1,5 +1,8 @@
+<br>
+<br>
+<br>
 <div class="container mx-auto px-4 py-8">
-    <h1 class="text-4xl font-bold mb-6 text-center">User Profile</h1>
+    <h1 class="text-4xl font-bold mb-6 text-center">Jui Mario</h1>
     <div class="flex flex-col items-center">
         <img [src]="randomMario" alt="Random Mario"
             class="w-48 h-48 object-cover mb-6 rounded" />
