--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,6 +8,7 @@
             <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/oui">Patés</a>
             <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/non">Terrines</a>
             <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/mario">Mario</a>
+            <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/fetch">Fetch</a>
         </div>
         <button class="md:hidden focus:outline-none" (click)="mobileMenuOpen = !mobileMenuOpen">
             <i class="fas fa-bars"></i>
@@ -26,6 +27,9 @@
         </li>
         <li>
             <a href="#" class="hover:text-yellow-200" routerLink="/mario" (click)="mobileMenuOpen = false">Mario</a>
+        </li>
+        <li>
+            <a href="#" class="hover:text-yellow-200" routerLink="/fetch" (click)="mobileMenuOpen = false">fetch</a>
         </li>
     </ul>
 </header>
