--- a/src/app/fetch/fetch.component.html
+++ b/src/app/fetch/fetch.component.html
@@ -7,15 +7,16 @@
         <h1 class="text-4xl font-bold mb-6 text-center text-blue-600">Temperatures</h1>
         <h3 class="text-xl font-bold mb-6 text-center text-blue-600"> {{lat}} </h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
-            <ng-container *ngFor="let temperature of temperatures; index as index">
+            <ng-container *ngFor="let temperature of temperatures; index as index;">
                 <div
                     class="bg-gradient-to-r from-emerald-200 to-sky-200 rounded-lg shadow-md p-4 transform hover:shadow-lg hover:-translate-y-1 transition duration-300 ease-in-out">
                     <div class="text-center mb-2">
                         <i class="fas fa-thermometer-half text-3xl text-indigo-700"></i>
                     </div>
                     <div class="text-center">
-                        <p class="text-sm font-semibold text-indigo-500">Heure {{ index }}</p>
+                        <p class="text-sm font-semibold text-indigo-500 first-letter:uppercase">{{ time[index] }}</p>
                         <p class="text-lg font-semibold text-indigo-700">{{ temperature }} °C</p>
+                        <p class="text-sm font-semibold text-indigo-700">Ressenti {{  temperaturesApparente[index] }} °C</p>
                     </div>
                 </div>
             </ng-container>
