ajout page exo emit

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,6 +10,7 @@
             <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/mario">Mario</a>
             <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/fetch">Fetch</a>
             <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/jeff">Tp Jeff</a>
+            <a href="#" class="text-lg font-medium hover:text-yellow-200" routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/emit">Emit</a>
         </div>
         <button class="md:hidden focus:outline-none" (click)="mobileMenuOpen = !mobileMenuOpen">
             <i class="fas fa-bars"></i>
@@ -34,6 +35,9 @@
         </li>
         <li>
             <a href="#" class="hover:text-yellow-200" routerLink="/jeff" (click)="mobileMenuOpen = false">Tp Jeff</a>
+        </li>
+        <li>
+            <a href="#" class="hover:text-yellow-200" routerLink="/emit" (click)="mobileMenuOpen = false">Emit</a>
         </li>
     </ul>
 </header>
