--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gray-100 flex flex-col items-center justify-center">
+<div class="min-h-screen  flex flex-col items-center justify-center">
     <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
       <h1 class="text-3xl font-bold mb-4">Bienvenue sur <span>{{ title }}</span>!</h1>
       <p class="mb-4">Cette application utilise Angular et Tailwind CSS pour créer une interface utilisateur moderne et
