--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,27 @@
-<div class="min-h-screen  flex flex-col items-center justify-center">
-    <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
+<div class="min-h-screen flex flex-col items-center justify-center">
+  <div class="bg-white rounded-lg shadow-md w-full max-w-md">
+    <div class="p-6">
       <h1 class="text-3xl font-bold mb-4">Bienvenue sur <span>{{ title }}</span>!</h1>
-      <p class="mb-4">Cette application utilise Angular et Tailwind CSS pour créer une interface utilisateur moderne et
-        réactive.</p>
+      <p class="mb-4">Cette application utilise Angular et Tailwind CSS pour créer une interface utilisateur moderne et réactive.</p>
       <div class="flex flex-col space-y-4">
-        <input type="text" [(ngModel)]="name"
-          class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none focus:border-blue-500">
+        <input type="text" [(ngModel)]="name" class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none focus:border-blue-500">
         <p class="mt-4 text-lg font-semibold">{{ name }}</p>
-
-        <button class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600" routerLink="/non">Patés</button>
-        <button class=" bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600"
-          routerLink="/non">Terrines</button>
       </div>
     </div>
   </div>
+  
+  <div class="mt-8">
+    <div class="max-w-md bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl">
+      <div class="md:flex">
+        <div class="md:flex-shrink-0" [style.background-image]="'url(' + meal?.strMealThumb + ')'" style="background-size: cover; background-position: center; width: 48%; padding-bottom: 48%;"></div>
+        <div class="p-8">
+          <div class="uppercase tracking-wide text-sm text-yellow-500 font-semibold">
+            Catégorie : {{ meal?.strCategory }}
+          </div>
+          <a href="#" class="block mt-1 text-lg leading-tight font-medium text-black hover:underline">{{ meal?.strMeal }}</a>
+          <p class="mt-2 text-gray-500">{{ meal?.strInstructions }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
