--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,28 +1,34 @@
 <br>
 <br>
 
-<div class="min-h-screen flex flex-col items-center justify-center bg-gradient-to-r from-red-300 to bg-yellow-300 rounded-xl">
+<div
+  class="min-h-screen flex flex-col items-center justify-center bg-gradient-to-r from-red-300 to bg-yellow-300 rounded-xl">
   <br>
   <br>
   <div class="bg-white rounded-lg shadow-md w-full max-w-md p-6">
     <div class="mb-6 text-center">
-      <h1 class="text-4xl font-bold mb-4 text-gray-700">Bienvenue sur <span class="text-blue-500">{{ title }} !</span></h1>
-      <p class="text-lg text-gray-600">Cette application utilise Angular et Tailwind CSS pour créer une interface utilisateur moderne et réactive.</p>
+      <h1 class="text-4xl font-bold mb-4 text-gray-700">Bienvenue sur <span class="text-blue-500">{{ title }} !</span>
+      </h1>
+      <p class="text-lg text-gray-600">Cette application utilise Angular et Tailwind CSS pour créer une interface
+        utilisateur moderne et réactive.</p>
     </div>
     <div class="flex flex-col space-y-4">
-      <input type="text" [(ngModel)]="name" class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none focus:border-blue-500">
+      <input type="text" [(ngModel)]="name"
+        class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none focus:border-blue-500">
       <p class="mt-4 text-lg font-semibold text-gray-700">{{ name }}</p>
     </div>
   </div>
   <div class="flex justify-center mt-8">
     <div class="bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl">
       <div class="md:flex">
-        <div class="md:flex-shrink-0 w-60" [style.background-image]="'url(' + meal?.strMealThumb + ')'" style="background-size: cover; background-position: center; padding-bottom: 60%;"></div>
+        <div class="md:flex-shrink-0 w-60" [style.background-image]="'url(' + meal?.strMealThumb + ')'"
+          style="background-size: cover; background-position: center; padding-bottom: 60%;"></div>
         <div class="p-8 w-full">
           <div class="uppercase tracking-wide text-lg text-yellow-500 font-semibold">
             Catégorie: {{ meal?.strCategory }}
           </div>
-          <a href="#" class="block mt-4 text-2xl leading-tight font-semibold text-black hover:text-blue-500">{{ meal?.strMeal }}</a>
+          <a href="#" class="block mt-4 text-2xl leading-tight font-semibold text-black hover:text-blue-500">{{
+            meal?.strMeal }}</a>
           <p class="mt-4 text-gray-500 text-lg">{{ meal?.strInstructions }}</p>
         </div>
       </div>
@@ -30,8 +36,3 @@
   </div>
   <br>
 </div>
-
-
-
-  
-
