Liste user exo jeff (user done)

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,6 +19,8 @@
                 routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/jeff">Tp Jeff</a>
             <a class="text-lg font-medium hover:text-yellow-200"
                 routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/emit">Emit</a>
+            <a class="text-lg font-medium hover:text-yellow-200"
+                routerLinkActive="border-b-2 border-yellow-200 text-yellow-200" routerLink="/tpdeux">Tp Jeff II</a>
         </div>
         <button class="md:hidden focus:outline-none" (click)="mobileMenuOpen = !mobileMenuOpen">
             <i class="fas fa-bars"></i>
