rajout de coms et posts pour try hard

--- a/src/app/tp-jeff-deux/tp-jeff-deux.component.html
+++ b/src/app/tp-jeff-deux/tp-jeff-deux.component.html
@@ -5,13 +5,13 @@
     <nav class="flex justify-around text-lg font-semibold">
         <a routerLink="/tpdeux/users" 
            class="transition-colors duration-300 hover:text-yellow-500" 
-           routerLinkActive="text-yellow-500 underline">Users List</a>
+           routerLinkActive="text-yellow-500 underline">Liste utilisateurs</a>
         <a routerLink="/tpdeux/posts" 
            class="transition-colors duration-300 hover:text-yellow-500" 
-           routerLinkActive="text-yellow-500 underline">Posts</a>
+           routerLinkActive="text-yellow-500 underline">Les posts</a>
         <a routerLink="/tpdeux/comments" 
            class="transition-colors duration-300 hover:text-yellow-500" 
-           routerLinkActive="text-yellow-500 underline">Comments</a>
+           routerLinkActive="text-yellow-500 underline">Les Coms</a>
     </nav>
 </div>
 <router-outlet></router-outlet>
